deployment/auth-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "rm -rf /var/lib/postgresql/data/*"]
      volumes:
        - name: auth-pg-data
          emptyDir: {} # For testing; replace with a PVC for persistent storage
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
  type: ClusterIP
