deployment/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  labels:
    app: auth-service

spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - name: auth-service
          image: gcr.io/intense-clarity-448014-u7/auth-service:multiplatform
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 512Mi
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service

spec:
  selector:
    app: auth-service
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
