deployment/marketplace-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketplace-service
  labels:
    app: marketplace-service
spec:
  replicas: 3 # Adjust replicas as needed
  selector:
    matchLabels:
      app: marketplace-service
  template:
    metadata:
      labels:
        app: marketplace-service
    spec:
      containers:
        - name: marketplace-service
          image: dverse/marketplace-api:multiplatform
          ports:
            - containerPort: 5001
          volumeMounts:
            - name: alembic-files
              mountPath: /app/alembic
          resources:
            requests:
              memory: "256Mi" # Minimum memory per container
              cpu: "250m" # Minimum CPU per container
            limits:
              memory: "512Mi" # Maximum memory per container
              cpu: "500m" # Maximum CPU per container
          livenessProbe:
            httpGet:
              path: "/health" # Update with your health endpoint if applicable
              port: 5001
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: "/health" # Update with your readiness endpoint if applicable
              port: 5001
            initialDelaySeconds: 5
            periodSeconds: 10
      restartPolicy: Always
      volumes:
        - name: alembic-files
          emptyDir: {} # For temporary storage
---
apiVersion: v1
kind: Service
metadata:
  name: marketplace-service
  labels:
    app: marketplace-service
spec:
  selector:
    app: marketplace-service
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
