deployment/nats-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
  labels:
    app: nats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats:latest
          ports:
            - containerPort: 4222 # Client connections
            - containerPort: 6222 # Cluster communication
            - containerPort: 8222 # Monitoring
---
apiVersion: v1
kind: Service
metadata:
  name: nats
spec:
  selector:
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: cluster
      protocol: TCP
      port: 6222
      targetPort: 6222 # Cluster communication
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222 # Monitoring
  type: ClusterIP
