deployment/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  labels:
    app: notification-service
spec:
  replicas: 1 # Adjust replicas as needed
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - name: notification-service
          image: gcr.io/intense-clarity-448014-u7/notification-service:multiplatform
          ports:
            - containerPort: 5003
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 512Mi
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  labels:
    app: notification-service
spec:
  type: ClusterIP
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
